force-app/main/default/objects/dsalesAsignacionDeTienda__c/dsalesAsignacionDeTienda__c.object-meta.xml
<CustomObject>
    <label>Asignación de Tienda</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nombre de Asignación de Tienda</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asignación de Tiendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>