force-app/main/default/objects/dsalesAsignacionDeTienda__c/fields/dsalesCampana__c.field-meta.xml
<CustomField>
    <fullName>dsalesCampana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Asignación de Tiendas</relationshipLabel>
    <relationshipName>Asignacion_de_Tiendas</relationshipName>
    <type>Lookup</type>
</CustomField>