force-app/main/default/objects/dsalesAsignacionDeTienda__c/fields/dsalesMatriz__c.field-meta.xml
<CustomField>
    <fullName>dsalesMatriz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matriz</label>
    <referenceTo>DSales_Matriz_GEX__c</referenceTo>
    <relationshipLabel>Asignación de Tiendas</relationshipLabel>
    <relationshipName>dsalesMatriz</relationshipName>
    <type>Lookup</type>
</CustomField>