force-app/main/default/objects/dsalesAsignacionDeTienda__c/fields/dsalesTienda__c.field-meta.xml
<CustomField>
    <fullName>dsalesTienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tienda</label>
    <referenceTo>Tienda__c</referenceTo>
    <relationshipLabel>Asignación de Tiendas</relationshipLabel>
    <relationshipName>Asignacion_de_Tiendas</relationshipName>
    <type>Lookup</type>
</CustomField>