force-app/main/default/objects/dsalesAsignacionDeTienda__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.DSales_Tipo_de_Producto__c</field>
            <operation>equals</operation>
            <value>Seguro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asignación de Tiendas</relationshipLabel>
    <relationshipName>Asignacion_de_Tiendas</relationshipName>
    <type>Lookup</type>
</CustomField>