force-app/main/default/objects/dsalesAsignacionDeTienda__c/recordTypes/dsalesAsignacindeMatriz.recordType-meta.xml
<RecordType>
    <fullName>dsalesAsignacindeMatriz</fullName>
    <active>true</active>
    <label>Asignación de Matríz</label>
</RecordType>