force-app/main/default/objects/dsalesAsignacionDeTienda__c/recordTypes/dsalesAsignacionDeCampanas.recordType-meta.xml
<RecordType>
    <fullName>dsalesAsignacionDeCampanas</fullName>
    <active>true</active>
    <label>Asignación de campañas</label>
</RecordType>