force-app/main/default/objects/dsalesAsignacionDeTienda__c/recordTypes/dsalesAsignacionDeSeguros.recordType-meta.xml
<RecordType>
    <fullName>dsalesAsignacionDeSeguros</fullName>
    <active>true</active>
    <label>Asignación de Seguros</label>
</RecordType>