force-app/main/default/objects/dsalesAsignacionDeTienda__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dsalesCampana__c</columns>
    <columns>dsalesMatriz__c</columns>
    <columns>Producto__c</columns>
    <columns>dsalesActivo__c</columns>
    <columns>dsalesTienda__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>